--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,19 @@
 
-table {
-    border-collapse: collapse;
-    margin: 15px 0;
+
+h2 {
+    color:whitesmoke;
 }
 
-td, th {
-    border: 0px solid black;
-    padding: 5px 10px;
-}
 
 #coffees {
     color: white;
 }
-.card {
-    width: 100%;
-    height: 175px;
-}
-.activator {
 
-}
+
 .nav-wrapper{
     background-color: black;
 }
-col {
-    width: 100%;
-    height: 175px;
-}
+
 
 body, html {
     height: 100%;
@@ -35,7 +23,7 @@ body, html {
 /* The hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");
+
 
     /* Set a specific height */
     height: 50%;
@@ -56,3 +44,9 @@ body, html {
     transform: translate(-50%, -50%);
     color: white;
 }
+/*.custom-select {*/
+    /*width: 400px;*/
+    /*height: 300px;*/
+    /*background-color: white;*/
+    /*color: black;*/
+/*}*/
