--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
 h2 {
     color:whitesmoke;
@@ -9,6 +13,9 @@ h2 {
     color: white;
 }
 
+.col {
+    width: 25%;
+}
 
 .nav-wrapper{
     background-color: black;
@@ -44,6 +51,15 @@ body, html {
     transform: translate(-50%, -50%);
     color: white;
 }
+
+.browser-default {
+    width: 35%;
+}
+
+.container {
+    width: 90%;
+}
+
 /*.custom-select {*/
     /*width: 400px;*/
     /*height: 300px;*/
