--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,53 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-h2 {
-    color:whitesmoke;
-}
-
-
-#coffees {
-    color: white;
-}
-
-.col {
-    width: 25%;
-}
-
-.nav-wrapper{
-    background-color: black;
-}
-
-
- body, html {
+body, html {
     height: 100%;
     font-family: 'Special Elite', cursive;
+    background-image: url("pagebackround.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-body{
-    background-repeat: no-repeat;
-    background-image: url("pagebackround.jpg");
-    background-attachment: fixed;
-    width: 1920px;
-    height: 1080px;
+/* The navigation bar */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+
+}
+
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+    background: #ddd;
+    color: black;
+}
+
+/* Main content */
+.main {
+    margin-top: 30px; /* Add a top margin to avoid content overlay */
+
 }
 
 /* The hero image */
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-
-
     /* Set a specific height */
-    height: 50%;
-
+    height: 400px;
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: center;
+    position: relative;
 }
 
 /* Place text in the middle of the image */
@@ -57,20 +57,111 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: whitesmoke;
 }
 
-.browser-default {
-    width: 35%;
+
+
+
+table {
+    border-collapse: collapse;
+    margin: 15px 0;
 }
 
-.container {
-    width: 90%;
+td, th {
+    border: 1px dashed black;
+    padding: 5px 10px;
+
 }
 
-/*.custom-select {*/
-    /*width: 400px;*/
-    /*height: 300px;*/
-    /*background-color: white;*/
-    /*color: black;*/
-/*}*/
+h1 {
+    font-family: 'Special Elite', cursive;
+    font-size: 82px;
+    text-align: center;
+}
+h2 {
+    text-align: center;
+    font-size: 25px;
+}
+
+main {
+    font-size: 24px;
+    font-family: 'Special Elite', cursive;
+
+}
+
+.roast-type {
+    font-size: 12px;
+    color: black;
+    font-family: 'Special Elite', cursive;
+
+}
+
+.light {
+    color: lightgrey;
+
+}
+
+.medium {
+    color: gray;
+
+}
+
+.dark {
+    color: black;
+
+}
+
+label{
+    font-family: 'Special Elite', cursive;
+    font-size: 24px;
+    position: relative;
+    top: 5px;
+    left: 4px;
+}
+#form-boy {
+    position: relative;
+    top: -14px;
+
+}
+#coffee-call {
+    font-family: 'Special Elite', cursive;
+    font-size: 32px;
+
+}
+#cup-size {
+    position: relative;
+    left: 16px;
+
+}
+.coffeeCard {
+    width: 13.5em;
+    background-color: brown;
+    opacity: 7%;
+}
+.logo-ch{
+    width: 32px;
+    height: 32px;
+    position: relative;
+    top: -4px;
+
+}
+#submit {
+    background-color: whitesmoke;
+    font-family: 'Special Elite', cursive;
+    color: black;
+}
+#newSuggestion {
+    background-color: whitesmoke;
+    font-family: 'Special Elite', cursive;
+    color: black;
+}
+#submitOrder {
+    background-color: whitesmoke;
+    font-family: 'Special Elite', cursive;
+    color: black;
+}
+.card-body {
+    background-color: brown;
+    border: 5px solid brown;
+}
