--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body, html {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
+    -webkit-box-shadow: 20px 20px 20px #FC0;
+    -moz-box-shadow:    20px 20px 20px #FC0;
+    box-shadow:         20px 20px 20px #FC0;
+    z-index:999;
 
 }
 
@@ -20,7 +24,7 @@ body, html {
 .navbar a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: whitesmoke;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -164,4 +168,7 @@ label{
 .card-body {
     background-color: brown;
     border: 5px solid brown;
+}
+.form-control {
+    border: 2px solid brown;
 }
