--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@ body, html {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
-    -webkit-box-shadow: 20px 20px 20px #FC0;
-    -moz-box-shadow:    20px 20px 20px #FC0;
-    box-shadow:         20px 20px 20px #FC0;
+    -webkit-box-shadow: 5px 5px 5px #333333;
+    -moz-box-shadow:    5px 5px 5px #333333;
+    box-shadow:         5px 5px 5px #333333;
     z-index:999;
 
 }
@@ -46,7 +46,7 @@ body, html {
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
     /* Set a specific height */
-    height: 400px;
+    height: 500px;
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
     background-repeat: no-repeat;
@@ -62,6 +62,28 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
     color: whitesmoke;
+    text-decoration: underline;
+}
+#bio-box {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    /* Set a specific height */
+    height: 300px;
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+#bio-text {
+    text-align: center;
+    position: center;
+    top: 18%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke;
+    text-shadow: 0 0 3px brown;
+    text-decoration: none;
+
 }
 
 
@@ -171,4 +193,8 @@ label{
 }
 .form-control {
     border: 2px solid brown;
+}
+#bio {
+    font-size: 30px;
+    color: whitesmoke;
 }
